--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "curso-nodejs-mongodb",
+  "name": "api-node-mongo-db",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^6.2.6"
+  }
 }
